<resources>
    <string name="app_name">Todo Task Reminder</string>

    <!--
    Activity Labels
    -->
    <string name="MainActivityLabel">Yet to be named</string>
    <string name="title_activity_main2">Main2Activity</string>


    <string name="title_activity_settings">Settings</string>
    <string name="title_pref_category_reminders">Reminders</string>
    <string name="title_pref_snooze_time">Snooze Time</string>

    <string name="sp_key_snooze_time">pref_key_snooze_time</string>

    <!--
    Login Activity
    -->
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Forget_password">Forget Password</string>
    <string name="Login">LOGIN</string>
    <string name="Sign_Up">SIGN UP</string>
    <string name="facebook_login">SIGN IN WITH FACEBOOK</string>
    <string name="google_login">SIGN IN WITH GOOGLE</string>

</resources>
