<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    >
    <android.support.v7.preference.PreferenceCategory
        android:title="@string/title_pref_category_reminders">

        <android.support.v7.preference.ListPreference
            android:key="@string/sp_key_snooze_time"
            android:title="@string/title_pref_snooze_time"
            android:entries="@array/array_snooze_time_entry_items"
            android:defaultValue="10"
            android:entryValues="@array/array_snooze_time_value_items"
            android:summary="%s"
            />

    </android.support.v7.preference.PreferenceCategory>
</android.support.v7.preference.PreferenceScreen>